       Closes: #155904

     - debian/patches/glibc22-hppa-fcntl.dpatch: added, patched by
       Carlos O'Donell <carlos@baldric.uwo.ca>.
     - debian/patches/glibc22-hppa-fcntl-lfs.dpatch: added, patched by
       Randolph Chung <tausq@debian.org>. Closes: #160846
     - debian/patches/glibc22-mips-mcontext.dpatch: added, patched by 
       Ryan Murray <rmurray@cyberhqz.com>. Closes: #160462

  * Ben Collins <bcollins@debian.org>
    - Make sparc64 build use gcc-3.2.
    - Update all config options to not use --disable-sanity-checks, since we
      are actually using gcc-3.2 for everything.
    - Patch cleanups.
    - Re-enable optimized libs. Includes a simple mechanism which should fix
      the conflicting symbols during libc/libc-opt upgrade scenarios. This
      means that libc6-v9, libc6-i586 and libc6-i686 are back in full swing.
    - Remove all references to /usr/doc symlink crap, which is deprecated.

  * XXX Below here was during the 2.2.92 development, and never released.

  * Jeff Bailey <jbailey@nisa.net>
     - Upgrade tarballs to 2.2.92
     - version: Update to 2.2.92
     - debian/control.in/main: Require gcc-3.2 for all archs
     - debian/patches/0list: prune glibc-cvs, glibc22-s390-resource,
       gmon-start, locales-de_CH, sh-sysdep, alpha-build-failure

       These are already included in the 2.3 series.

     - debian/patches/glibc22-misc.dpatch: Split into ...
       debian/patches/makeconfig.dpatch: ... this
       debian/patches/locale-es_AR.dpatch: ... and this
       debian/patches/i386-mathinline.dpatch: ... and this
       debian/patches/ldconfig.dpatch: ... and this.

     - debian/patches/makeconfig.dpatch: Update for 2.3 series

     - debian/patches/0list: Temporarily disable some other patches:

       glibc22-hppa-pthreads, glibc22-hppa-rela, ia64-perf

     - debian/rules: memset.S works on ppc now, so stop deleting it.  Thanks 
       to Jack Howarth <howarth@fuse.net> for letting us know.
