@@ -36,8 +36,6 @@ endif
 	-find $(tmpdir)/$@$(docdir)/$@ -type f | xargs -r gzip -9f
 	$(INSTALL_DATA) debian/copyright $(tmpdir)/$@$(docdir)/$@/.
 
-	cp -a debian/$@/* $(tmpdir)/$@/DEBIAN
-
 	dpkg-gencontrol -isp -p$@ -P$(tmpdir)/$@
 	chown -R root.root $(tmpdir)/$@
 	chmod -R go=rX $(tmpdir)/$@
