@@ -60,6 +60,9 @@ glibc (2.2.93-1) unstable; urgency=low
      - debian/patches/glibc22-mips-mcontext.dpatch: added, patched by 
        Ryan Murray <rmurray@cyberhqz.com>. Closes: #160462
 
+     - packages.d/libc-{dbg,pic,prof}.mk: fix /usr/doc removal
+       compilation failure.
+
   * Ben Collins <bcollins@debian.org>
     - Make sparc64 build use gcc-3.2.
     - Update all config options to not use --disable-sanity-checks, since we
